# agentic-cervical-screener

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  PROJECT_OVERVIEW.md  QUICK_OVERVIEW.md  README.md  TESTING_GUIDE.md  TODO.md  clarifications.md  nginx.conf  pixi.toml  project-report.md  pyproject.toml  test-responsive.html
.codex/: config.toml
.github/: README.md
.github/workflows/: ci.yml  deploy.yml  image-build-push.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
agentic_cervical_screener/: __init__.py  main.py  model_loader.py
backend-stub/: Dockerfile  main.py  model_loader.py  requirements.txt  test_model.py
deploy/k8s/: TRAEFIK-HELM-GUIDE.md  cervical-app-service.yaml  cervical-ingress-middleware.yaml  config.yaml  deploy.sh  deploy.yaml  ghcr-secret.yaml  health-check.yaml  ingress-route.yaml  monitoring.yaml  traefik-values.yaml  values.yaml
deploy/k8s/base/: configmap.yaml  deployment.yaml  ingress-route.yaml  kustomization.yaml  middlewares.yaml  pdb.yaml  secret.yaml  service.yaml
deploy/k8s/mlflow/: deployment.yaml  forward-oauth.yaml  ingress-route.yaml  ingress.yaml  oauth-secret.yaml  oauth2-proxy.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  pvc.yaml  service.yaml  verify-postgres-migration.sh
deploy/k8s/production/: README.md  ingress.yaml  kustomization.yaml  namespace.yaml
deploy/k8s/staging/: README.md  ingress.yaml  kustomization.yaml  namespace.yaml
docs/: AGENT_GUIDE.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  TESTING.md  coordinate-spaces.md  project-report.md  project_overview.md  sidebar-zoom.md
docs/__tests__/: project_overview.index.test.ts
docs/metrics/: onboarding-log.csv
frontend/: docs-overview.html  index.html  package-lock.json  package.json  pixi.toml  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/docs/: AUTO_TIMEOUT_FEATURE.md  COORDINATE_COMPUTATION_ANALYSIS.md  DEBUGGING_SUBPROCESS_STDIN.md  ENVIRONMENT_ARCHITECTURE.md  ENVIRONMENT_SUMMARY.md  MIGRATION_TO_MLX_VLM.md  READY_TO_TEST.md  ROBUST_COORDINATE_STRATEGY.md  SETUP_COMPLETE.md  STRATEGY_COMPARISON.md  VLM_MODEL_GUIDE.md  VLM_OPTIONS.md  VLM_QUICK_START.md  VLM_RECOMMENDATION.md  ZOOM_ISSUES_AND_FIXES.md
frontend/e2e/: README.md  docs-overview.spec.ts  mobile-alignment.spec.ts  viewer-responsive.spec.ts  viewer.spec.ts
frontend/prompts/vlm/: README.md  docs-audit.txt  viewer-audit.txt
frontend/scripts/: add-vlm-model.sh  docs-overview-vlm.ts  mlx-vlm-wrapper.ts  test-llm-image.ts  test-llm-inherit.ts  test-llm-path.ts  test-llm-simple.ts  test-llm-spawn.ts  test-llm-stdin.ts  test-llm-streams.ts  test-mlx-vlm.sh  test_vlm_viewer_audit.py  vlm_viewer_audit.py
frontend/src/: main.ts
frontend/src/services/: cqaiClient.ts  (+2 more)
notebooks/: test-notebook.ipynb  weights.pt
prompts/vlm/: README.md  docs-audit.txt  viewer-audit.txt
public/: index.html
public/cases/: cric-2cefdbf695da71852337ae3557ccdd38-gt.geojson  cric-2cefdbf695da71852337ae3557ccdd38.json  cric-3731e3064f5b3dfaf2df337f4b481c78-gt.geojson  cric-3731e3064f5b3dfaf2df337f4b481c78.json  cric-4372f7114534a5e0b688673c15a43fa9-gt.geojson  cric-4372f7114534a5e0b688673c15a43fa9.json  cric-5633910bdb41ea5626f7b60a8ef80af0-gt.geojson  cric-5633910bdb41ea5626f7b60a8ef80af0.json  cric-624930d9bfc4219ba1bdd73ea3fed13b-gt.geojson  cric-624930d9bfc4219ba1bdd73ea3fed13b.json  cric-66c20a252497fd16ec17a40b5dbc05f6-gt.geojson  cric-66c20a252497fd16ec17a40b5dbc05f6.json  cric-7c09a4a52e0cb6ffc6a10044dd321123-gt.geojson  cric-7c09a4a52e0cb6ffc6a10044dd321123.json  cric-c01b36e0a384197ca9a2e6bcd2c552e1-gt.geojson  cric-c01b36e0a384197ca9a2e6bcd2c552e1.json  cric-c22f24fa5dc7c8d99c2d2ba5e293960c-gt.geojson  cric-c22f24fa5dc7c8d99c2d2ba5e293960c.json  cric-c63289c59bca91f80b2dde9ac013cc57-gt.geojson  cric-c63289c59bca91f80b2dde9ac013cc57.json  cric-e40cc4bedbe9837b12f9343953b391ef-gt.geojson  cric-e40cc4bedbe9837b12f9343953b391ef.json  cric-e4c629cd4647aa3e1a5bd66590118b44-gt.geojson  cric-e4c629cd4647aa3e1a5bd66590118b44.json  cric-fcc9c7e2fc1a0f4d30fa745308d15194-gt.geojson  cric-fcc9c7e2fc1a0f4d30fa745308d15194.json  dataset-samples.json
public/mock/: case-002.json  case-003.json  case-004.json  case-demo.json  classify.json  detections-case2.json  detections-case3.json  detections-case4.json  detections-points-case2.json  detections-points-case3.json  detections-points-case4.json  detections-points.json  detections-rects.json
public/model/: best.int8.onnx  labels.json
public/niivue/: niivue.js
scripts/: __init__.py  capture_vlm_screenshots.py  convert_images_to_webp.py  download_figshare_dataset.py  export_to_onnx.py  extract_dataset.py  import_dataset_cases.py  serve_static.py  smoke_sidebar.py  vlm_viewer_audit.py
scripts/docs/: check-doc-freshness.ts  onboarding-metrics.ts
specs/001-project-guide-index/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py  main.py  model_loader.py
src/api/: classifyClient.js  cqaiClient.js
src/viewer/: index.js  overlayAdapters.js
tests/: __init__.py  conftest.py  test_api.py  test_integration.py  test_model.py  test_vlm_viewer_audit.py
training/: README.md  pixi.toml  pre-commit-config.yaml  pyproject.toml  setup.py
training/cervical_screening/: __init__.py
training/cervical_screening/config/: __init__.py  paths_config.py  training_config.py
training/cervical_screening/evaluation/: __init__.py  evaluator.py  metrics.py  predictor.py  slide_aggregator.py  tta_evaluator.py
training/cervical_screening/models/: __init__.py  cell_classifier.py  roi_extractor.py  yolo_trainer.py
training/cervical_screening/utils/: __init__.py  drive_utils.py  io_utils.py  visualization.py
training/experiments/baseline_training/: README.md  train.py
training/experiments/slide_aggregation/: README.md  aggregate.py
training/experiments/tta_evaluation/: README.md  run_tta.py
training/experiments/two_stage_classifier/: README.md  train_stage2.py
(+36 files in other folders)
