[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-cervical-screener"
version = "0.1.0"
description = "AI-powered cervical cancer screening application"
authors = [
    {name = "Python-AI-Solutions"},
]
readme = "README.md"
keywords = ["ai", "medical", "cervical-cancer", "screening", "yolo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
# Dependencies managed by Pixi (see [tool.pixi.dependencies])
dependencies = []

[project.urls]
Homepage = "https://github.com/Python-AI-Solutions/agentic-cervical-screener"
Repository = "https://github.com/Python-AI-Solutions/agentic-cervical-screener"
Issues = "https://github.com/Python-AI-Solutions/agentic-cervical-screener/issues"

[project.scripts]
cervical-api = "agentic_cervical_screener.main:app"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:.*Ultralytics.*:UserWarning",
]
timeout = 10
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["agentic_cervical_screener"]
omit = [
    "tests/*",
    "agentic_cervical_screener/models/*",
    "public/*",
    ".pixi/*",
    "build/*",
    "dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip() without strict parameter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert statements in tests

[tool.ruff.lint.isort]
known-first-party = ["agentic_cervical_screener"]

[tool.ruff.format]
# Use single quotes for strings
quote-style = "double"
# Respect magic trailing commas
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true


[tool.hatch.build.targets.wheel]
packages = ["agentic_cervical_screener"]

[tool.bandit]
exclude_dirs = ["tests", "agentic_cervical_screener/models", "public"]
exclude = ["**/__init__.py"]
skips = ["B101", "B601"]

[tool.pixi.project]
channels = ["conda-forge", "pytorch"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.tasks]
dev = "uvicorn agentic_cervical_screener.main:app --reload --host localhost --port 8000"
start = "uvicorn agentic_cervical_screener.main:app --host 0.0.0.0 --port 8000"
test = "python -m pytest tests/ -x -q"
test-ci = "python -m pytest tests/ -v --tb=short"
test-integration = "python -m pytest tests/ -m integration -v"
test-coverage = "python -m pytest tests/ --cov=agentic_cervical_screener --cov-report=html --cov-report=term"
install-browsers = "playwright install chromium"
format = "ruff format ."
lint = "ruff check agentic_cervical_screener/ tests/"
check-all = "pre-commit run --all-files"
pre-commit-install = "pre-commit install"
download-dataset = "python scripts/download_figshare_dataset.py"
extract-dataset = "python scripts/extract_dataset.py"

[tool.pixi.dependencies]
# Core runtime
python = "3.12.*"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
python-multipart = "*"
pillow = "*"
numpy = "<2"
opencv = "*"
markdown = "*"
pyyaml = "*"

# ML
pytorch = "*"
torchvision = "*"
scikit-learn = "*"
ultralytics = "*"
matplotlib = "*"
pandas = "*"
tqdm = "*"
seaborn = "*"
psutil = "*"
py-cpuinfo = "*"

# System libs for OpenCV/image processing
glib = "*"
libjpeg-turbo = "*"
libpng = "*"
libtiff = "*"
p7zip = "*"

# Test
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-timeout = "*"
httpx = "*"
requests = "*"
playwright-python = "*"

# Dev
pre-commit = "*"
ruff = "*"
mypy = "*"
pip = "*"
llm = "*"
openai = "<2"
jiter = "<0.12"
rich = "<14"

[tool.pixi.pypi-dependencies]
instructor = "*"

